# Aiwork

./: .env.example  .flake8  .gitignore  ANALYSIS_REPORT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_INSTALL.md  TUI_IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
aiwork/: compliance_checklist.md  requirements.txt
aiwork/examples/: quickstart.py
aiwork/scripts/: setup_windows.bat
aiwork/src/aiwork/: __init__.py
aiwork/tests/: test_core.py
benchmarks/: openvino_benchmark.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  INTEL problem 2.md  MOCK_IMPLEMENTATIONS.md  PRODUCTION_GUIDE.md  ROADMAP.md  TUI_GUIDE.md  UI_GUIDE.md  USER_GUIDE.md  architecture.md  deployment.md  intel.txt  project-readme.md  user-guide.md
examples/: README.md  airflow_export_demo.py  api_usage_example.py  guardrails_demo.py  llm_agent_demo.py  memory_demo.py  quickstart.py  state_tracking_demo.py  tui_demo.py
examples/agents/customer_support/: README.md  run.py
examples/agents/document_processor/: README.md  USAGE.md  run.py
scripts/: setup_linux.sh
src/aiwork/: __init__.py  orchestrator.py
src/aiwork/api/: __init__.py  __main__.py  server.py
src/aiwork/core/: __init__.py  agent.py  guardrail.py  llm.py  memory.py  observability.py  prompts.py  task.py
src/aiwork/executors/: __init__.py  base_executor.py  local_executor.py
src/aiwork/integrations/: airflow_exporter.py  kafka_adapter.py
tests/: test_agent.py  test_api.py  test_api_cli.py  test_api_server_startup.py  test_benchmarks.py  test_examples.py  test_executor.py  test_executor_pattern.py  test_guardrail.py  test_integrations.py  test_llm.py  test_memory.py  test_observability.py  test_registry.py  test_state_manager.py  test_task.py  test_tui.py
(+28 files in other folders)
